--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,26 +2,46 @@
   class="flex flex-wrap bg-gray-800 justify-between min-h-11 px-8 items-center"
 >
   <div class="flex flex-wrap space-x-6">
+    <a routerLink="/news">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" class="w-6 h-6">
+        <path d="M11.47 3.841a.75.75 0 0 1 1.06 0l8.69 8.69a.75.75 0 1 0 1.06-1.061l-8.689-8.69a2.25 2.25 0 0 0-3.182 0l-8.69 8.69a.75.75 0 1 0 1.061 1.06l8.69-8.689Z" />
+        <path d="m12 5.432 8.159 8.159c.03.03.06.058.091.086v6.198c0 1.035-.84 1.875-1.875 1.875H15a.75.75 0 0 1-.75-.75v-4.5a.75.75 0 0 0-.75-.75h-3a.75.75 0 0 0-.75.75V21a.75.75 0 0 1-.75.75H5.625a1.875 1.875 0 0 1-1.875-1.875v-6.198a2.29 2.29 0 0 0 .091-.086L12 5.432Z" />
+      </svg>
+    </a>
+    
+    
     <a
+      *ngIf="!userLoggedIn"
       class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-2 py-1 text-sm font-medium"
       routerLink="/login"
       rel="noopener noreferrer"
       >Login</a
     >
-    <a
+    <p
+      *ngIf="userLoggedIn"
+      class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-2 py-1 text-sm font-medium"
+    >
+      Welcome {{ firebaseAuth.currentUser?.displayName }}
+    </p>
+    <!-- <a
       class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-2 py-1 text-sm font-medium"
       routerLink="/signup"
       rel="noopener noreferrer"
       >SignUp</a
-    >
+    > -->
     <a
       class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-2 py-1 text-sm font-medium"
       routerLink="/news"
       rel="noopener noreferrer"
       >Add News</a
     >
-    
   </div>
-  
+  <div>
+    <button
+      class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-2 py-1 text-sm font-medium"
+      (click)="signOut()"
+    >
+      Sign out
+    </button>
+  </div>
 </div>
-
