--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,1 @@
-<!-- <div class="flex flex-col items-center justify-center mt-6">
-    <h1>This is Dashboard</h1>
-  
-    <div>
-      <a routerLink="/login">Login</a>
-    </div>
-  </div>
-  <router-outlet></router-outlet> -->
+<p>Home works</p>
