--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -38,7 +38,7 @@
             [formGroup]="form"
             (ngSubmit)="onSubmit()"
           >
-    
+          <div *ngIf="errorMessage">{{ errorMessage }}</div>
             <div class="flex flex-col">
               <label
                 class="block text-gray-700 text-sm font-bold mb-1 ml-1"
@@ -70,6 +70,7 @@
             
             <div class="flex items-center justify-between gap-4">
               <button
+              [disabled]="form.invalid"
                 class="w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-slate-500 hover:bg-slate-600"
                 type="submit"
               >
