--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -31,13 +31,26 @@
         </svg>
 
         <h2 class="font-bold text-2xl">SignUp to create your account</h2>
-        <p>Already have an account? <a class="text-purple-800" routerLink="/login">Login</a></p>
+        <p>
+          Already have an account?
+          <a class="text-purple-800" routerLink="/login">Login</a>
+        </p>
         <div class="mt-10 w-full">
           <form
             class="max-w-md w-full space-y-8"
             [formGroup]="form"
             (ngSubmit)="onSubmit()"
           >
+            <div *ngIf="errorMessage">{{ errorMessage }}</div>
+            <div
+              *ngIf="
+                form.get('password')?.touched &&
+                form.get('confirmPassword')?.touched &&
+                form.value.password !== form.value.confirmPassword
+              "
+            >
+              password and confirm password must be equal
+            </div>
             <div class="flex flex-col">
               <label
                 class="block text-gray-700 text-sm font-bold mb-1 ml-1"
@@ -96,7 +109,8 @@
             </div>
             <div class="flex items-center justify-between gap-4">
               <button
-              [disabled]="form.invalid"
+                id="submit"
+                [disabled]="form.invalid"
                 class="w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-slate-500 hover:bg-slate-600"
                 type="submit"
               >
