--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,1 +1,12 @@
-<p>news works!</p>
+<body style="background-color: #292a2d" class="">
+  <div class="parentDiv min-h-screen">
+    <div>
+      <div
+        style="background-color: #1f1f1f"
+        class="flex flex-col text-yellow-50 items-start w-1/2 border-2 ml-40 bg-gray-400"
+      >
+        sdjfnskdjnfks
+      </div>
+    </div>
+  </div>
+</body>
