--- a/src/app/add-news/add-news.component.html
+++ b/src/app/add-news/add-news.component.html
@@ -43,9 +43,11 @@
           formControlName="country"
         >
           <option>Select a country</option>
-          <option>United States</option>
-          <option>Canada</option>
-          <option>Mexico</option>
+          <option>INDIA</option>
+          <option>UNITED STATES</option>
+          <option>CANADA</option>
+          <option>RUSSIA</option>
+          <option>WORLD NEWS</option>
         </select>
       </div>
       <div class="mb-4">
@@ -65,6 +67,7 @@
           <option>Crime</option>
           <option>Sports</option>
           <option>Finance</option>
+          <option>GEO POLITICS</option>
         </select>
       </div>
       <div class="mb-6">
