Added edit functionality

--- a/src/app/add-news/add-news.component.html
+++ b/src/app/add-news/add-news.component.html
@@ -1,9 +1,9 @@
-<div class="bg-gray-100">
+<div class="bg-gray-600 h-screen py-10">
   <div class="container mx-auto px-4 py-5">
     <form
       [formGroup]="form"
       (ngSubmit)="onSubmit()"
-      class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4"
+      class="bg-gray-300 shadow-md rounded px-8 pt-6 pb-8 mb-4"
     >
       <div class="mb-4">
         <label class="block text-gray-700 text-sm font-bold mb-2" for="title">
@@ -32,7 +32,7 @@
           formControlName="imagePath"
         />
       </div>
-       <img  src="{{form.value.imagePath}}" alt="">
+      <img src="{{ form.value.imagePath }}" alt="" />
       <div class="mb-4">
         <label class="block text-gray-700 text-sm font-bold mb-2" for="country">
           Country
@@ -41,6 +41,7 @@
           class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
           id="country"
           formControlName="country"
+          [(ngModel)]="selectedCountry"
         >
           <option>Select a country</option>
           <option>INDIA</option>
@@ -61,8 +62,10 @@
           class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
           id="anotherSelect"
           formControlName="newstype"
+          [(ngModel)] ="selectedNewsType"
         >
-          <option>Business</option>
+        <option >Select Topic</option>
+          <option >Business</option>
           <option>Politics</option>
           <option>Crime</option>
           <option>Sports</option>
@@ -89,7 +92,6 @@
         <button
           class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
           type="submit"
-          
         >
           Submit
         </button>
