--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,15 +1,27 @@
-<div style="background-color: #202124;"
+<div
+  style="background-color: #202124"
   class="flex flex-wrap justify-between min-h-11 px-8 pt-5 pb-1 items-center"
 >
   <div class="flex flex-wrap space-x-6">
-    <a routerLink="/news">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" class="w-6 h-6">
-        <path d="M11.47 3.841a.75.75 0 0 1 1.06 0l8.69 8.69a.75.75 0 1 0 1.06-1.061l-8.689-8.69a2.25 2.25 0 0 0-3.182 0l-8.69 8.69a.75.75 0 1 0 1.061 1.06l8.69-8.689Z" />
-        <path d="m12 5.432 8.159 8.159c.03.03.06.058.091.086v6.198c0 1.035-.84 1.875-1.875 1.875H15a.75.75 0 0 1-.75-.75v-4.5a.75.75 0 0 0-.75-.75h-3a.75.75 0 0 0-.75.75V21a.75.75 0 0 1-.75.75H5.625a1.875 1.875 0 0 1-1.875-1.875v-6.198a2.29 2.29 0 0 0 .091-.086L12 5.432Z" />
+    <a
+      routerLink="/news"
+      
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 24 24"
+        fill="white"
+        class="w-6 h-6"
+      >
+        <path
+          d="M11.47 3.841a.75.75 0 0 1 1.06 0l8.69 8.69a.75.75 0 1 0 1.06-1.061l-8.689-8.69a2.25 2.25 0 0 0-3.182 0l-8.69 8.69a.75.75 0 1 0 1.061 1.06l8.69-8.689Z"
+        />
+        <path
+          d="m12 5.432 8.159 8.159c.03.03.06.058.091.086v6.198c0 1.035-.84 1.875-1.875 1.875H15a.75.75 0 0 1-.75-.75v-4.5a.75.75 0 0 0-.75-.75h-3a.75.75 0 0 0-.75.75V21a.75.75 0 0 1-.75.75H5.625a1.875 1.875 0 0 1-1.875-1.875v-6.198a2.29 2.29 0 0 0 .091-.086L12 5.432Z"
+        />
       </svg>
     </a>
-    
-    
+
     <a
       *ngIf="!userLoggedIn"
       class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-2 py-1 text-sm font-medium"
@@ -21,7 +33,7 @@
       *ngIf="userLoggedIn"
       class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-2 py-1 text-sm font-medium"
     >
-      Welcome {{ firebaseAuth.currentUser?.displayName | uppercase}} 
+      Welcome {{ firebaseAuth.currentUser?.displayName | uppercase }}
     </p>
     <!-- <a
       class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-2 py-1 text-sm font-medium"
@@ -33,13 +45,25 @@
       class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-2 py-1 text-sm font-medium"
       routerLink="/add-news"
       rel="noopener noreferrer"
+      routerLinkActive="active"
+      [routerLinkActiveOptions]="{ exact: true }"
       >Add News</a
     >
     <a
       class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-2 py-1 text-sm font-medium"
       routerLink="/home"
       rel="noopener noreferrer"
+      routerLinkActive="active"
+      [routerLinkActiveOptions]="{ exact: true }"
       >My News</a
+    >
+    <a
+      class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-2 py-1 text-sm font-medium"
+      routerLink="/politics"
+      rel="noopener noreferrer"
+      routerLinkActive="active"
+      [routerLinkActiveOptions]="{ exact: true }"
+      >Politics</a
     >
   </div>
   <div>
