--- a/src/app/politics-news/politics-news.component.html
+++ b/src/app/politics-news/politics-news.component.html
@@ -85,16 +85,10 @@
             </p>
           </div>
         </div>
-        <div class="flex flex-row justify-between items-center w-full">
-            <button
+        <div class="flex flex-row justify-end items-end w-full">
             
-            class="ml-1 px-4 py-1 bg-cyan-800 hover:bg-cyan-900 text-white rounded-3xl"
-            (click)="deleteData(item.id)"
-          >
-            Delete
-          </button>
           <h1 class="text-base font-extralight tracking-wider text-white">
-            Created by {{ item.authorName | uppercase }}
+            By {{ item.authorName | uppercase }}
           </h1>
         </div>
       </div>
